# ClaudeDesktopPlusPlus

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md
.github/workflows/: release.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/scripts/: copy-windows-runtime.mjs  serve-ui.mjs  tauri-run.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/src/: main.rs
assets/inject/: chinese-localization.js  renderer-inject.js
assets/localization/zh-CN/: LICENSE-CyrusNee-claude-desktop-zh-cn.txt  THIRD_PARTY_NOTICES.txt  zh-CN.json
assets/localization/zh-CN/ion-dist/i18n/: zh-CN.json
assets/localization/zh-CN/ion-dist/i18n/statsig/: zh-CN.json
crates/claude-plus-core/: Cargo.toml
crates/claude-plus-core/src/: asar_patch.rs  cdp.rs  install.rs  launcher.rs  lib.rs
crates/claude-plus-launcher/: Cargo.toml
crates/claude-plus-launcher/src/: main.rs
docs/: claude-desktop-1.15962.1-analysis.md  development-tracking.md
ui/cyber-console/: app.js  index.html  styles.css
