[workspace]
members = [
  "crates/claude-plus-core",
  "crates/claude-plus-launcher",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
