[package]
name = "claude-plus-desktop"
version = "0.1.41"
edition = "2021"
license = "MIT"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
claude-plus-core = { path = "../../../crates/claude-plus-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tiny_http = "0.12"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
uuid = { version = "1", features = ["v4"] }
